fix table overflow issue

--- a/client/src/pages/Home/CalonPetugas/index.scss
+++ b/client/src/pages/Home/CalonPetugas/index.scss
@@ -4,11 +4,14 @@
   color: $primary-color-dark;
 }
 
+.calon-petugas-table-wrapper {
+  overflow-x: auto;
+}
+
 .calon-petugas-table {
   width: 100%;
   margin-top: 1rem;
   border-collapse: collapse;
-  border-radius: 1rem;
   border: 1px solid #00000017;
 
   & tr {
