--- a/client/src/pages/Home/index.scss
+++ b/client/src/pages/Home/index.scss
@@ -4,6 +4,7 @@
   flex: 4;
   padding: 2rem;
   color: $dark;
+  overflow-x: auto;
 }
 
 .home-title {
